--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/joshwlambert/lifecycling/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/joshwlambert/lifecycling/actions/workflows/R-CMD-check.yaml)
 [![Codecov test coverage](https://codecov.io/gh/joshwlambert/lifecycling/branch/main/graph/badge.svg)](https://app.codecov.io/gh/joshwlambert/lifecycling?branch=main)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+![GitHub last commit (by committer)](https://img.shields.io/github/last-commit/joshwlambert/lifecycling?color=%23E6E6FA)
 <!-- badges: end -->
 
 The goal of lifecycling is to demonstrate good practises for communicating the 
